# python_template

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  pytest.yml
example/: __init__.py
example/data/: 01.yml
scripts/: s001.py
workflows/: deploy.yml
